make UITest launchable with JDK 11